--- a/.chart-rcp/Chart.yaml
+++ b/.chart-rcp/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
 name: weaver-loom
-version: 0.1.184
+version: 0.1.185
 maintainers:
   - name: Experience API Team
-    url: 'https://expedia.slack.com/app_redirect?channel=ask-experience-api'
+    url: https://expedia.slack.com/app_redirect?channel=ask-experience-api
 dependencies:
   - name: paved-road-service
     version: 7.1.0
