--- a/.github/workflows/my-first-workflow.yaml
+++ b/.github/workflows/my-first-workflow.yaml
@@ -15,11 +15,11 @@ jobs:
 
     steps:
       - name: Set up Git repository
-        if: github.event.pull_request == true
+        if: github.event.pull_request.merged == true
         uses: actions/checkout@v2
 
       - name: Use Node.js ${{ matrix.node-version }}
-        if: github.event.pull_request == false
+        if: github.event.pull_request.merged == false
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
