--- a/.github/workflows/my-second-workflow.yaml
+++ b/.github/workflows/my-second-workflow.yaml
@@ -31,10 +31,10 @@ jobs:
       - name: Executing a script
         if: github.event.pull_request.merged == true
         run: yarn update:helm-chart
-      
+
       - name: Upgrading patch version
         if: github.event.pull_request.merged == true
-        uses: EndBug/add-and-commit@v9
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          add: '--all'
-          message: 'upgrade: patch version upgrade'
+          commit-message: 'upgrade: patch version upgrade'
+          branch: master
