--- a/.github/workflows/my-second-workflow.yaml
+++ b/.github/workflows/my-second-workflow.yaml
@@ -24,17 +24,17 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
            
-      - name: Installing dependencies
-        if: github.event.pull_request.merged == true
-        run: yarn install
+      # - name: Installing dependencies
+      #   if: github.event.pull_request.merged == true
+      #   run: yarn install
 
-      - name: Executing a script
-        if: github.event.pull_request.merged == true
-        run: yarn update:helm-chart
+      # - name: Executing a script
+      #   if: github.event.pull_request.merged == true
+      #   run: yarn update:helm-chart
 
-      - name: Upgrading patch version
-        if: github.event.pull_request.merged == true
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: 'upgrade: patch version upgrade'
-          branch: master
+      # - name: Upgrading patch version
+      #   if: github.event.pull_request.merged == true
+      #   uses: stefanzweifel/git-auto-commit-action@v4
+      #   with:
+      #     commit_message: 'upgrade: patch version upgrade'
+      #     branch: master
