--- a/.github/workflows/my-first-workflow.yaml
+++ b/.github/workflows/my-first-workflow.yaml
@@ -17,6 +17,8 @@ jobs:
       - name: Set up Git repository
         if: github.event.pull_request.merged == true
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Use Node.js ${{ matrix.node-version }}
         if: github.event.pull_request.merged == true
